--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -663,19 +663,18 @@ input[type="text"] {
   background: #fff;
   text-align: center;
   width: 560px;
+  box-shadow: 0 12px 16px 0 rgba(214, 224, 232, 0.7);
 }
 
 .page-pic {
   position: relative;
-  height: auto;
   background: #ccc;
   line-height: 0;
   overflow: hidden;
-  width: 560px;
 }
 
 .page-pic img {
-  width: 100%;
+  width: 560px;
   height: auto;
 }
 
